# python-duckdb-etl

./: .env_example  Dockerfile  README.md  app.py  duck_conversion_function.py  duckdb.db  pipeline.py  pyproject.toml
pasta_gdown/: sales_05_01_2024.csv  sales_05_01_2024.parquet  sales_06_01_2024.csv  sales_07_01_2024.json
sql/: tables.sql
