[tool.poetry]
name = "python-duckdb-etl"
version = "0.1.0"
description = ""
authors = ["Robinson Lovatto <robinson.lovatto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
